--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     name: helpinminutes-api
 
   datasource:
-    url: ${DATABASE_URL:jdbc:postgresql://localhost:5432/him}
+    url: ${SPRING_DATASOURCE_URL:${DATABASE_URL:jdbc:postgresql://localhost:5432/him}}
     username: ${DATABASE_USER:him}
     password: ${DATABASE_PASSWORD:him}
     hikari:
