--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,15 @@
 server:
-  port: ${PORT:8080}
+  port: ${PORT:8081}
+
+eureka:
+  client:
+    service-url:
+      defaultZone: ${EUREKA_URL:http://localhost:8761/eureka/}
+    enabled: ${EUREKA_ENABLED:false}
+    fetch-registry: true
+    register-with-eureka: true
+  instance:
+    prefer-ip-address: true
 
 spring:
   application:
@@ -67,6 +77,11 @@ app:
 
   realtime:
     redisPubSubChannel: ${REALTIME_REDIS_CHANNEL:him:rt:events}
+
+twilio:
+  accountSid: ${TWILIO_ACCOUNT_SID:}
+  authToken: ${TWILIO_AUTH_TOKEN:}
+  verifyServiceSid: ${TWILIO_VERIFY_SERVICE_SID:}
 
 logging:
   level:
